Fix bug #28721 (appendChild() and insertBefore() unset DOMText)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@161233 c90b9560-bf6c-de11-be94-00142212c4b1